[package]
name = "caesercipher"
version = "1.0.1"
edition = "2024"
description = "Simple caeser cipher implemented in rust"
readme = "README.md"
repository = "https://github.com/Will2003debug/caeser-cipher"
license = "MIT"
keywords = ["cryptography", "caesercipher"]
categories = ["cryptography"]

[dependencies]
